[package]
edition = "2021"
name = "laguna-runtime"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# laguna-chain's primitives
primitives = {path = "../primitives", default-features = false}

# runtime's basic pallet impl
pallet-aura = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-authorship = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-grandpa = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-scheduler = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-sudo = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-timestamp = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-proxy = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}


# smart contracts
pallet-contracts = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-contracts-primitives = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-insecure-randomness-collective-flip = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-evm-compat = {path = "../pallets/evm-compat", default-features = false}
pallet-evm-compat-common = {path = "../pallets/evm-compat/common", default-features = false}
pallet-evm-compat-rpc-runtime-api = {path = "../pallets/evm-compat/rpc/runtime-api", default-features = false}


# monetary system
orml-tokens = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', version = "0.4.1-dev", default-features = false, branch = "polkadot-v0.9.42"}
pallet-contract-asset-registry = {path = "../pallets/contract-asset-registry", default-features = false}
pallet-currencies = {path = "../pallets/currencies", default-features = false}
pallet-system-contract-deployer = {path = "../pallets/system-contract-deployer", default-features = false}

# government
pallet-treasury = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

# fee and validator
pallet-fee-enablement = {path = "../pallets/fee-enablement", default-features = false}
pallet-fee-measurement = {path = "../pallets/fee-measurement", default-features = false}
pallet-fluent-fee = {path = "../pallets/fluent-fee", default-features = false}
pallet-prepaid = {path = "../pallets/prepaid", default-features = false}
pallet-transaction-payment = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

# share traits from both orml and our repo
orml-traits = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', version = "0.4.1-dev", default-features = false, branch = "polkadot-v0.9.42"}
traits = {version = "0.1.0", path = "../pallets/traits", default-features = false}

# interface for pallet build with frame
frame-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42", optional = true}
frame-executive = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
frame-system-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42", optional = true}
frame-system-rpc-runtime-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

# sp stands for substrate-primitives, used across node and runtime
sp-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-block-builder = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-consensus-aura = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-inherents = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-offchain = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-session = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

sp-transaction-pool = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-version = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
fp-self-contained = {default-features = false, git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.42"}
fp-rpc = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.42" , default-features = false}
pallet-evm = {default-features = false, git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.42"}

ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }


# parity SCALE codec
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0'}
hex-literal = {version = '0.3.1'}
pallet-currencies-rpc-runtime-api = {version = "0.1.0", path = "../pallets/currencies/rpc/runtime-api", default-features = false}
scale-info = {default-features = false, features = ['derive'], version = '2.0.1'}
rlp = { version = "0.5.2", default-features = false }

# build dependency for the wasm runtime
[build-dependencies]
substrate-wasm-builder = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  'frame-support/runtime-benchmarks',
  'frame-system-benchmarking',
  'frame-system/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
]
std = [
  "orml-tokens/std",
  "orml-traits/std",
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-executive/std",
  "frame-system-rpc-runtime-api/std",
  "sp-version/std",
  "sp-api/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-transaction-pool/std",
  "sp-offchain/std",
  "sp-session/std",
  "primitives/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-grandpa/std",
  "pallet-sudo/std",
  "pallet-prepaid/std",
  "pallet-timestamp/std",
  'pallet-scheduler/std',
  'pallet-treasury/std',
  'pallet-currencies/std',
  'pallet-currencies-rpc-runtime-api/std',
  'pallet-transaction-payment/std',
  'pallet-evm-compat/std',
  'pallet-evm-compat-common/std',
  'pallet-evm-compat-rpc-runtime-api/std',
  'pallet-evm/std',
  'ethereum/std',
  'pallet-transaction-payment-rpc-runtime-api/std',
  "pallet-fluent-fee/std",
  'pallet-contracts/std',
  'pallet-contracts-primitives/std',
  'pallet-insecure-randomness-collective-flip/std',
  'pallet-fee-enablement/std',
  'pallet-fee-measurement/std',
  'pallet-proxy/std',
  'fp-self-contained/std',
  "fp-rpc/std",
  'traits/std',
  'pallet-contract-asset-registry/std',
  'pallet-system-contract-deployer/std',
  "rlp/std"
]
