[package]
name = "subxt-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [workspace]

[dependencies]
primitives = {path = '../primitives', default-features = false}
subxt = "0.22.0"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "time"] }
sp-keyring = "6.0.0"
futures = "0.3.21"
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"
anyhow = "1.0.58"

[features]
default = ['std', 'local-metadata']
std = ['primitives/std']
local-metadata = []
