[package]
edition = "2021"
name = "pallet-call-scheduler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { default-features = false, features = ['derive'], package = "parity-scale-codec", version = "3.1.5" }
log = "0.4.17"
primitives = {path = "../../primitives", default-features = false}
scale-info = { default-features = false, features = ['derive'], version = "2.1.2" }

frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}

pallet-balances = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
pallet-transaction-payment = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
pallet-contract-asset-registry = {version = "0.1.0", path = "../contract-asset-registry", default-features = false}
pallet-contracts = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22", default-features = false}
pallet-currencies = {version = '0.1.0', path = '../currencies', default-features = false}

sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
sp-io = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}

orml-currencies = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.22"}
orml-tokens = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.22"}
orml-traits = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.22"}

frame-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22", optional = true}
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.3.4"
traits = {version = "0.1.0", path = "../traits", default-features = false}

[dev-dependencies]
pallet-randomness-collective-flip = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime/std",
  "hex/std",
  "pallet-transaction-payment/std",
  "pallet-balances/std",
  "pallet-randomness-collective-flip/std",
  "pallet-timestamp/std",
  "pallet-contracts/std",
  "pallet-contract-asset-registry/std",
  "primitives/std",
  "orml-currencies/std",
  "orml-tokens/std",
  "orml-traits/std",
  "traits/std",
]
