[package]
edition = "2021"
name = "pallet-contract-asset-registry"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0'}
log = "0.4.14"
traits = {path = "../traits", default-features = false}

scale-info = {default-features = false, features = ['derive'], version = '2.0.1'}

frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

# contracts related deps
pallet-contracts = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27", default-features = false}
pallet-contracts-primitives = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27", default-features = false}

frame-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27", optional = true}
hex = {version = "0.4.3", default-features = false}
hex-literal = "0.3.4"

orml-traits = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', version = "0.4.1-dev", default-features = false, branch = "polkadot-v0.9.27"}

[dev-dependencies]
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
pallet-randomness-collective-flip = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
pallet-sudo = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
pallet-transaction-payment = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
primitives = {path = "../../primitives"}
sp-io = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "hex/std",
  'pallet-contracts/std',
  'pallet-contracts-primitives/std',
  'orml-traits/std',
]
