[package]
edition = "2021"
name = "pallet-currencies"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0'}
log = "0.4.14"
primitives = {path = "../../primitives", default-features = false}
traits = {path = "../traits", default-features = false}

scale-info = {default-features = false, features = ['derive'], version = '2.0.1'}

frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

frame-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42", optional = true}
hex = {version = "0.4.3", default-features = false}
hex-literal = "0.3.4"

orml-traits = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.42"}
pallet-contract-asset-registry = {version = "0.1.0", path = "../contract-asset-registry", default-features = false}

[dev-dependencies]
once_cell = "1.12.0"
orml-tokens = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', version = "0.4.1-dev", branch = "polkadot-v0.9.42"}
pallet-contracts = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-insecure-randomness-collective-flip = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-transaction-payment = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-io = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "hex/std",
  "primitives/std",
  'orml-traits/std',
  'pallet-contract-asset-registry/std',
]
