[package]
name = "pallet-evm-compat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0'}
log = "0.4.14"
scale-info = {default-features = false, features = ['derive'], version = '2.0.1'}

sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27", default-features = false}

pallet-contracts = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
pallet-contracts-primitives = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

orml-traits = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.27"}
traits = {version = "0.1.0", path = "../traits", default-features = false}

frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

frame-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27", optional = true}
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }

[dev-dependencies]
orml-tokens = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = "polkadot-v0.9.27"}
pallet-transaction-payment = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
primitives = {path = "../../primitives"}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-io = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "sp-core/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "traits/std",
  "ethereum/std",
  "pallet-contracts/std",
  "pallet-contracts-primitives/std",
]
