[package]
name = "pallet-evm-compat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"

codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0'}
scale-info = {default-features = false, features = ['derive'], version = '2.0.1'}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42", default-features = false}

pallet-contracts = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-contracts-primitives = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

pallet-proxy = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

orml-traits = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.42"}
traits = {version = "0.1.0", path = "../traits", default-features = false}

frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

# evm-compat layer
pallet-evm = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.42", default-features = false}
fp-ethereum = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.42", default-features = false}
fp-rpc = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.42", default-features = false}

ethereum = { version = "0.14.0", default-features = false, features = ["with-codec", "with-serde"] }
pallet-evm-compat-common = { version = "0.1.0", path = "common", default-features = false}
rlp = { version = "0.5.1", default-features = false, features = ["derive"]}

hex = {version = "0.4.3", default-features = false}
frame-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42", optional = true}
ethereum-types = { version = "0.14.1", default-features = false }

[dev-dependencies]
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
fp-self-contained = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.42"}
pallet-transaction-payment = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
primitives = {path = "../../primitives"}
sp-io = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
pallet-insecure-randomness-collective-flip = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
libsecp256k1 = { version = "0.7", features = ["static-context", "hmac"] }
serde_json = "1.0.85"

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "sp-core/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "traits/std",
  "ethereum/std",
  "pallet-contracts/std",
  "pallet-evm-compat-common/std",
  "fp-ethereum/std",
  "fp-rpc/std",
  "pallet-contracts-primitives/std",
  "pallet-evm/std",
  "pallet-proxy/std",
  "ethereum-types/std",
  "rlp/std",
  "hex/std"
]
